# controllers/user.go
@@ -1,6 +1,7 @@
 package controllers
 
 import (
+	"goProject3/elasticsearch"
 	"goProject3/service"
 	"strconv"
 
@@ -8,6 +9,7 @@ import (
 )
 
 type UserController interface {
+	SearchUser(c *gin.Context)
 	DeleteUser(c *gin.Context)
 	SignUp(c *gin.Context)
 	SignIn(c *gin.Context)
@@ -16,11 +18,13 @@ type UserController interface {
 
 type UserControllerImpl struct {
 	UserService service.UserService
+	UserES      elasticsearch.UserES
 }
 
-func NewUserController(s service.UserService) UserController {
+func NewUserController(s service.UserService, e elasticsearch.UserES) UserController {
 	return &UserControllerImpl{
 		UserService: s,
+		UserES:      e,
 	}
 }
 
@@ -60,8 +64,37 @@ func (u *UserControllerImpl) DeleteUser(c *gin.Context) {
 		})
 	} else {
 		u.UserService.DeleteUser(dbuser)
+		u.UserES.DeleteUser(c.Request.Context(), userIdInt)
 		c.JSON(200, gin.H{
 			"message": "Delete User " + userId + " successfully!!",
 		})
 	}
+}
+
+//SearchUser godoc
+//@Summary Tim kiem user
+//@Description Tim kiem user
+//@Tags SearchUser
+//@Accept json
+//@Produce json
+//@Param keyword path string true "Key word"
+//@Param page query int false "Page"
+//@Param limit query int false "Limit"
+//@Param sort query string false "Sort"
+//@Success 200 {object} models.JsonResponse
+//@Failure 400 {object} models.JsonResponse
+//@Router /user/search/{keyword} [post]
+func (u *UserControllerImpl) SearchUser(c *gin.Context) {
+	query := c.Param("keyword")
+	users, err := u.UserES.SearchUser(c.Request.Context(), query)
+	if err != nil {
+		c.JSON(400, gin.H{
+			"message": err,
+		})
+		return
+	}
+
+	c.JSON(200, gin.H{
+		"data": users,
+	})
 }
